# PD-LR7

./: CMakeLists.txt  actionmanager.cpp  actionmanager.h  colorOperations.asm  contentwidget.cpp  contentwidget.h  fileinfo.cpp  fileinfo.h  iactionmanager.cpp  iactionmanager.h  imageeffectscontroller.cpp  imageeffectscontroller.h  main.cpp  mainwindow.cpp  mainwindow.h  menubar.cpp  menubar.h  scrollerswidget.cpp  scrollerswidget.h  sliderbox.cpp  sliderbox.h  stacklist.cpp  stacklist.h
Effects/: EffectsBuilder.h  abstracteffect.h
